@@ -1,3 +1,7 @@
+2008-05-29  Martin Kutschker  <masi@typo3.org>
+
+	* Fixed bug #8270: hardcoded labels in title attributes of icons in top bar of BE interface (thanx to Stefano Kowalko)
+
 2008-05-28  Ernesto Baschny  <ernst@cron-it.de>
 
 	* Fixed bug #8522: Datetime shifts on copy and localize (timezone related)
